--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,6 @@ body{
   background-color: lightskyblue;
 }
 
-
-
 .App{
   background: #ffffff;
   box-shadow: 0px 10px 20px rgba(0,0,0,0.04);
@@ -66,10 +64,13 @@ body{
   .content{
     padding: 40px;
     
-    h1{
+    .contentSearch{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       margin: 0 0 40px 0;
     }
-    
+
     .catalog{
 
       display: flex;
@@ -81,7 +82,17 @@ body{
         margin: 20px;
         width: 210px;
         border-radius: 40px;
-  
+
+        &:hover{
+          box-shadow: 0px 14px 30px rgba(0,0,0,0.15)
+        }
+
+        .unliked{
+          margin-left: 5px;
+          width: 24px;
+          height: 24px;
+        }
+
         .imgSneakers{
           width: 130px;
           height: 70px;
@@ -101,4 +112,25 @@ body{
     }
   
   }
+
+  .overlay{
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.1);
+    z-index: 1;
+
+    .rightSite{
+      position: absolute;
+      width: 385px;
+      height: 100%;
+      right: 0;
+      background: #ffffff;
+      box-shadow: -10px 4px 24px rgba(0,0,0,0.1)
+    }
+  }
+
 }
+
