--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -41,10 +41,12 @@ header{
 .headerCart{
     width: 18px;
     height: 18px;
+    cursor: pointer;
 }
   
 .headerUser{
     width: 18px;
     height: 18px;
+    cursor: pointer;
 }
 
